<resources>
    <string name="app_name">Vapor</string>
    <string name="vapor_title">VAPOR</string>
    <string name="sign_in_button">Sign In</string>
    <string name="username_label">Username:</string>
    <string name="fname_label">First Name:</string>
    <string name="username">RealGamer</string>
    <string name="realgamer">RealGamer</string>
    <string name="library_button">View Library</string>
    <string name="store_button">Store Page</string>
    <string name="account_label">My Account</string>
    <string name="first_name">Real</string>
    <string name="email_label">Email:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="lastName">Gamer</string>
    <string name="email">real.gamer@gamers.com</string>
    <string name="phone_number_label">Phone:</string>
    <string name="phone_number">555–555–5555</string>
    <string name="address_label">Address:</string>
    <string name="address">123 Gamer St</string>
    <string name="card_number">Card Number:</string>
    <string name="cardNumber">1234567890</string>
    <string name="security_code_label">Security Code:</string>
    <string name="security_code">007</string>
    <string name="expiration_month_label">Exp. Month:</string>
    <string name="expiration_month">03</string>
    <string name="expiration_year_label">Exp. Year:</string>
    <string name="expiration_year">2027</string>
    <string name="update_button">Update</string>
    <string name="content_explanation">Photo showing several popular video game characters</string>
    <string name="library">My Library</string>
    <string name="hint_search_bar">Search</string>
    <string name="game_title">Game Title</string>
    <string name="game_description">Game Description. A quick blurb about the game.</string>
    <string name="game_release_date">01/01/2023</string>
    <string name="game_publisher">Game Publisher</string>
    <string name="game_developer">Game DEV</string>
    <string name="game_score">100%</string>
    <string name="game_price">Buy: $00.00</string>
    <string name="game_about">This is a long description which gives additional information over several paragraphs.</string>
    <string name="vapor_game_store">Vapor Game Store</string>
    <string name="browse_our_collection_of_games">Browse our collection of games</string>
    <string name="fictional_game">Fictional Game</string>
    <string name="buy">Buy</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="account">Account</string>
    <string name="description_of_the_game">Description of the game</string>
    <string name="get_code">Get Code</string>
    <string name="game_image">Game image</string>
    <string name="game_icon_description" />


    <string name="search_button" />
    <string name="view_store">VIEW IN STORE</string>

</resources>