<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:padding="16dp">

    
    <ImageView
        android:id="@+id/gameImage"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/game_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/gameTitle"
        android:text="@string/game_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/gameImage"
        app:layout_constraintStart_toEndOf="@+id/gameImage"
        app:layout_constraintEnd_toStartOf="@+id/gameButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/gameDescription"/>

    <TextView
        android:id="@+id/gameDescription"
        android:text="@string/description_of_the_game"
        android:textSize="14sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/gameTitle"
        app:layout_constraintStart_toEndOf="@+id/gameImage"
        app:layout_constraintEnd_toStartOf="@+id/gameButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="@+id/gameImage"/>

    <Button
        android:id="@+id/gameButton"
        android:text="@string/get_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/gameImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/gameImage"/>

</androidx.constraintlayout.widget.ConstraintLayout>
