<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:padding="16dp">

    <ImageView
        android:id="@+id/gameImageLibrary"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/game_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/gameTitleLibrary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/gameImageLibrary"
        app:layout_constraintEnd_toStartOf="@+id/gameButtonLibrary"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/gameImageLibrary"
        app:layout_constraintTop_toTopOf="@+id/gameImageLibrary" />


    <Button
        android:id="@+id/gameButtonLibrary"
        android:text="@string/view_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/gameImageLibrary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/gameImageLibrary"/>

</androidx.constraintlayout.widget.ConstraintLayout>